--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ dependencies:
     - sudo add-apt-repository -y ppa:ubuntu-elisp/ppa
     - sudo apt-get update
     - sudo apt-get install -qq emacs24-nox emacs-snapshot
-    - sudo update-alternatives --set emacs /usr/bin/emacs24-nox
+    - sudo update-alternatives --set emacs /usr/bin/emacs-snapshot
   cache_directories:
     - node_modules
     - resources/bower_components
